fixed problem with scrollbar in chrome

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -16,7 +16,7 @@ $color-text: #e8eceb;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
   text-align: center;
   background-color: $color-background;
@@ -30,7 +30,7 @@ $color-text: #e8eceb;
 }
 
 .main-nav{
-  width: 100vw;
+  width: 100%;
   background-color: $color-menu;
   display: flex;
   flex-wrap: nowrap;
@@ -79,8 +79,8 @@ $color-text: #e8eceb;
 
   .start_character-img,
   .howToPlay_character-img{
-    width: 100%;
-    height: 100%;
+    width: 99%;
+    height: 99%;
   }
 
   .start_description,
@@ -90,6 +90,11 @@ $color-text: #e8eceb;
     border-radius: 10px;
     box-shadow: 14px 8px 50px 0 rgba(213, 130, 34, 1);
     width:40%;
+    transition: .1s;
+    &:hover{
+      transform: scale(1.02);
+    }
+
     @media (max-width: 700px) {
       width: 80%;
       margin-bottom: 20px;
@@ -99,6 +104,7 @@ $color-text: #e8eceb;
     .howToPlay_description-header{
       font-size: 1.8rem;
       padding-top: 30px;
+
     }
 
     .start_description-paragraph,
@@ -120,7 +126,7 @@ $color-text: #e8eceb;
 //tutaj footer//
 /////////////////////
 .footer{
-  width:100vw;
+  width:100%;
   background-color: $color-footer;
   display: flex;
   justify-content: space-between;
